exp1/Code/syntax.output
State 67 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | STRUCT SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT error LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec
   28         | error COMMA
   29         | error RP

   30 CompSt: LC DefList StmtList RC
   31       | LC error RC

   32 StmtList: Stmt StmtList
   33         | %empty

   34 Stmt: Exp SEMI
   35     | Exp
   36     | CompSt
   37     | RETURN Exp SEMI
   38     | IF LP Exp RP Stmt
   39     | IF LP Exp RP Stmt ELSE Stmt
   40     | IF LP Exp RP error ELSE Stmt
   41     | WHILE LP Exp RP Stmt
   42     | WHILE LP error LC

   43 DefList: Def DefList
   44        | %empty

   45 Def: Specifier DecList SEMI
   46    | Specifier DecList
   47    | STAR DIV
   48    | error SEMI

   49 DecList: Dec
   50        | Dec COMMA DecList

   51 Dec: VarDec
   52    | VarDec ASSIGNOP Exp

   53 Exp: Exp ASSIGNOP Exp
   54    | Exp AND Exp
   55    | Exp OR Exp
   56    | Exp RELOP Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp STAR Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | LP error RP
   63    | MINUS Exp
   64    | NOT Exp
   65    | ID LP Args RP
   66    | ID LP error RP
   67    | ID LP RP
   68    | Exp LB Exp RB
   69    | Exp LB error RB
   70    | Exp LB RB
   71    | Exp DOT ID
   72    | ID
   73    | INT
   74    | FLOAT

   75 Args: Exp COMMA Args
   76     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 14 21 24 28 29 31 40 42 48 62 66 69
INT (258) 20 73
FLOAT (259) 74
ID (260) 16 18 19 22 23 65 66 67 71 72
PLUS (261) 57
MINUS (262) 58 63
STAR (263) 47 59
DIV (264) 47 60
DOT (265) 71
SEMI (266) 4 5 7 8 34 37 45 48
COMMA (267) 10 25 28 50 75
ASSIGNOP (268) 52 53
RELOP (269) 56
AND (270) 54
OR (271) 55
NOT (272) 64
LP (273) 22 23 38 39 40 41 42 61 62 65 66 67
RP (274) 22 23 24 29 38 39 40 41 61 62 65 66 67
LB (275) 20 21 68 69 70
RB (276) 20 21 68 69 70
LC (277) 13 14 30 31 42
RC (278) 13 14 30 31
IF (279) 38 39 40
ELSE (280) 39 40
WHILE (281) 41 42
STRUCT (282) 8 13 14 15
RETURN (283) 37
TYPE (284) 11
LOWER_THAN_ELSE (285)
LOWER_THAN_SEMI (286)


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
Program (33)
    on left: 1, on right: 0
ExtDefList (34)
    on left: 2 3, on right: 1 2
ExtDef (35)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (36)
    on left: 9 10, on right: 4 10
Specifier (37)
    on left: 11 12, on right: 4 5 6 7 27 45 46
StructSpecifier (38)
    on left: 13 14 15, on right: 12
OptTag (39)
    on left: 16 17, on right: 13
Tag (40)
    on left: 18, on right: 15
VarDec (41)
    on left: 19 20 21, on right: 9 10 20 21 27 51 52
FunDec (42)
    on left: 22 23 24, on right: 6
VarList (43)
    on left: 25 26, on right: 22 25
ParamDec (44)
    on left: 27 28 29, on right: 25 26
CompSt (45)
    on left: 30 31, on right: 6 36
StmtList (46)
    on left: 32 33, on right: 30 32
Stmt (47)
    on left: 34 35 36 37 38 39 40 41 42, on right: 32 38 39 40 41
DefList (48)
    on left: 43 44, on right: 13 14 30 43
Def (49)
    on left: 45 46 47 48, on right: 43
DecList (50)
    on left: 49 50, on right: 45 46 50
Dec (51)
    on left: 51 52, on right: 49 50
Exp (52)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72 73 74, on right: 34 35 37 38 39 40 41 52 53 54 55 56 57 58
    59 60 61 63 64 68 69 70 71 75 76
Args (53)
    on left: 75 76, on right: 65 75


State 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

    8 ExtDef: STRUCT . SEMI
   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . error LC DefList RC
   15                | STRUCT . Tag

    error  shift, and go to state 8
    ID     shift, and go to state 9
    SEMI   shift, and go to state 10

    LC  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 15
    ID     shift, and go to state 16
    SEMI   shift, and go to state 17

    ExtDecList  go to state 18
    VarDec      go to state 19
    FunDec      go to state 20


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   14 StructSpecifier: STRUCT error . LC DefList RC

    LC  shift, and go to state 21


State 9

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 10

    8 ExtDef: STRUCT SEMI .

    $default  reduce using rule 8 (ExtDef)


State 11

   13 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 22


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

    7 ExtDef: Specifier error . SEMI
   24 FunDec: error . RP

    SEMI  shift, and go to state 23
    RP    shift, and go to state 24


State 16

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 25

    $default  reduce using rule 19 (VarDec)


State 17

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 18

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 26


State 19

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB

    COMMA  shift, and go to state 27
    LB     shift, and go to state 28

    $default  reduce using rule 9 (ExtDecList)


State 20

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 29

    CompSt  go to state 30


State 21

   14 StructSpecifier: STRUCT error LC . DefList RC

    error   shift, and go to state 31
    STAR    shift, and go to state 32
    STRUCT  shift, and go to state 33
    TYPE    shift, and go to state 2

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 7
    DefList          go to state 35
    Def              go to state 36


State 22

   13 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 31
    STAR    shift, and go to state 32
    STRUCT  shift, and go to state 33
    TYPE    shift, and go to state 2

    RC  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 36


State 23

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 24

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 25

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    error   shift, and go to state 38
    RP      shift, and go to state 39
    STRUCT  shift, and go to state 33
    TYPE    shift, and go to state 2

    Specifier        go to state 40
    StructSpecifier  go to state 7
    VarList          go to state 41
    ParamDec         go to state 42


State 26

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 27

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 43

    ExtDecList  go to state 44
    VarDec      go to state 19


State 28

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . error RB

    error  shift, and go to state 45
    INT    shift, and go to state 46


State 29

   30 CompSt: LC . DefList StmtList RC
   31       | LC . error RC

    error   shift, and go to state 47
    STAR    shift, and go to state 32
    STRUCT  shift, and go to state 33
    TYPE    shift, and go to state 2

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 7
    DefList          go to state 48
    Def              go to state 36


State 30

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 31

   48 Def: error . SEMI

    SEMI  shift, and go to state 49


State 32

   47 Def: STAR . DIV

    DIV  shift, and go to state 50


State 33

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . error LC DefList RC
   15                | STRUCT . Tag

    error  shift, and go to state 8
    ID     shift, and go to state 9

    LC  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 34

   45 Def: Specifier . DecList SEMI
   46    | Specifier . DecList

    ID  shift, and go to state 43

    VarDec   go to state 51
    DecList  go to state 52
    Dec      go to state 53


State 35

   14 StructSpecifier: STRUCT error LC DefList . RC

    RC  shift, and go to state 54


State 36

   43 DefList: Def . DefList

    error   shift, and go to state 31
    STAR    shift, and go to state 32
    STRUCT  shift, and go to state 33
    TYPE    shift, and go to state 2

    INT     reduce using rule 44 (DefList)
    FLOAT   reduce using rule 44 (DefList)
    ID      reduce using rule 44 (DefList)
    MINUS   reduce using rule 44 (DefList)
    NOT     reduce using rule 44 (DefList)
    LP      reduce using rule 44 (DefList)
    LC      reduce using rule 44 (DefList)
    RC      reduce using rule 44 (DefList)
    IF      reduce using rule 44 (DefList)
    WHILE   reduce using rule 44 (DefList)
    RETURN  reduce using rule 44 (DefList)

    Specifier        go to state 34
    StructSpecifier  go to state 7
    DefList          go to state 55
    Def              go to state 36


State 37

   13 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 56


State 38

   28 ParamDec: error . COMMA
   29         | error . RP

    COMMA  shift, and go to state 57
    RP     shift, and go to state 58


State 39

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 40

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 43

    VarDec  go to state 59


State 41

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 60


State 42

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 61

    $default  reduce using rule 26 (VarList)


State 43

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 44

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 45

   21 VarDec: VarDec LB error . RB

    RB  shift, and go to state 62


State 46

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 63


State 47

   31 CompSt: LC error . RC
   48 Def: error . SEMI

    SEMI  shift, and go to state 49
    RC    shift, and go to state 64


State 48

   30 CompSt: LC DefList . StmtList RC

    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    MINUS   shift, and go to state 68
    NOT     shift, and go to state 69
    LP      shift, and go to state 70
    LC      shift, and go to state 29
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72
    RETURN  shift, and go to state 73

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 75
    Stmt      go to state 76
    Exp       go to state 77


State 49

   48 Def: error SEMI .

    $default  reduce using rule 48 (Def)


State 50

   47 Def: STAR DIV .

    $default  reduce using rule 47 (Def)


State 51

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   51 Dec: VarDec .
   52    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 78
    LB        shift, and go to state 28

    $default  reduce using rule 51 (Dec)


State 52

   45 Def: Specifier DecList . SEMI
   46    | Specifier DecList .

    SEMI  shift, and go to state 79

    $default  reduce using rule 46 (Def)


State 53

   49 DecList: Dec .
   50        | Dec . COMMA DecList

    COMMA  shift, and go to state 80

    $default  reduce using rule 49 (DecList)


State 54

   14 StructSpecifier: STRUCT error LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 55

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 56

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 57

   28 ParamDec: error COMMA .

    $default  reduce using rule 28 (ParamDec)


State 58

   29 ParamDec: error RP .

    $default  reduce using rule 29 (ParamDec)


State 59

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 28

    $default  reduce using rule 27 (ParamDec)


State 60

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 61

   25 VarList: ParamDec COMMA . VarList

    error   shift, and go to state 38
    STRUCT  shift, and go to state 33
    TYPE    shift, and go to state 2

    Specifier        go to state 40
    StructSpecifier  go to state 7
    VarList          go to state 81
    ParamDec         go to state 42


State 62

   21 VarDec: VarDec LB error RB .

    $default  reduce using rule 21 (VarDec)


State 63

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 64

   31 CompSt: LC error RC .

    $default  reduce using rule 31 (CompSt)


State 65

   73 Exp: INT .

    $default  reduce using rule 73 (Exp)


State 66

   74 Exp: FLOAT .

    $default  reduce using rule 74 (Exp)


State 67

   65 Exp: ID . LP Args RP
   66    | ID . LP error RP
   67    | ID . LP RP
   72    | ID .

    LP  shift, and go to state 82

    LP        [reduce using rule 72 (Exp)]
    $default  reduce using rule 72 (Exp)


State 68

   63 Exp: MINUS . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 83


State 69

   64 Exp: NOT . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 84


State 70

   61 Exp: LP . Exp RP
   62    | LP . error RP

    error  shift, and go to state 85
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 86


State 71

   38 Stmt: IF . LP Exp RP Stmt
   39     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP Exp RP error ELSE Stmt

    LP  shift, and go to state 87


State 72

   41 Stmt: WHILE . LP Exp RP Stmt
   42     | WHILE . LP error LC

    LP  shift, and go to state 88


State 73

   37 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 89


State 74

   36 Stmt: CompSt .

    $default  reduce using rule 36 (Stmt)


State 75

   30 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 90


State 76

   32 StmtList: Stmt . StmtList

    INT     shift, and go to state 65
    FLOAT   shift, and go to state 66
    ID      shift, and go to state 67
    MINUS   shift, and go to state 68
    NOT     shift, and go to state 69
    LP      shift, and go to state 70
    LC      shift, and go to state 29
    IF      shift, and go to state 71
    WHILE   shift, and go to state 72
    RETURN  shift, and go to state 73

    $default  reduce using rule 33 (StmtList)

    CompSt    go to state 74
    StmtList  go to state 91
    Stmt      go to state 76
    Exp       go to state 77


State 77

   34 Stmt: Exp . SEMI
   35     | Exp .
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    PLUS      shift, and go to state 92
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    LB        shift, and go to state 102

    $default  reduce using rule 35 (Stmt)


State 78

   52 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 103


State 79

   45 Def: Specifier DecList SEMI .

    $default  reduce using rule 45 (Def)


State 80

   50 DecList: Dec COMMA . DecList

    ID  shift, and go to state 43

    VarDec   go to state 51
    DecList  go to state 104
    Dec      go to state 53


State 81

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 82

   65 Exp: ID LP . Args RP
   66    | ID LP . error RP
   67    | ID LP . RP

    error  shift, and go to state 105
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70
    RP     shift, and go to state 106

    Exp   go to state 107
    Args  go to state 108


State 83

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   63    | MINUS Exp .
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 96
    LB    shift, and go to state 102

    $default  reduce using rule 63 (Exp)


State 84

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   64    | NOT Exp .
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    DOT  shift, and go to state 96
    LB   shift, and go to state 102

    $default  reduce using rule 64 (Exp)


State 85

   62 Exp: LP error . RP

    RP  shift, and go to state 109


State 86

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   61    | LP Exp . RP
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    RP        shift, and go to state 110
    LB        shift, and go to state 102


State 87

   38 Stmt: IF LP . Exp RP Stmt
   39     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . Exp RP error ELSE Stmt

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 111


State 88

   41 Stmt: WHILE LP . Exp RP Stmt
   42     | WHILE LP . error LC

    error  shift, and go to state 112
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 113


State 89

   37 Stmt: RETURN Exp . SEMI
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    SEMI      shift, and go to state 114
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    LB        shift, and go to state 102


State 90

   30 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 30 (CompSt)


State 91

   32 StmtList: Stmt StmtList .

    $default  reduce using rule 32 (StmtList)


State 92

   57 Exp: Exp PLUS . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 115


State 93

   58 Exp: Exp MINUS . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 116


State 94

   59 Exp: Exp STAR . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 117


State 95

   60 Exp: Exp DIV . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 118


State 96

   71 Exp: Exp DOT . ID

    ID  shift, and go to state 119


State 97

   34 Stmt: Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 98

   53 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 120


State 99

   56 Exp: Exp RELOP . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 121


State 100

   54 Exp: Exp AND . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 122


State 101

   55 Exp: Exp OR . Exp

    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70

    Exp  go to state 123


State 102

   68 Exp: Exp LB . Exp RB
   69    | Exp LB . error RB
   70    | Exp LB . RB

    error  shift, and go to state 124
    INT    shift, and go to state 65
    FLOAT  shift, and go to state 66
    ID     shift, and go to state 67
    MINUS  shift, and go to state 68
    NOT    shift, and go to state 69
    LP     shift, and go to state 70
    RB     shift, and go to state 125

    Exp  go to state 126


State 103

   52 Dec: VarDec ASSIGNOP Exp .
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    LB        shift, and go to state 102

    $default  reduce using rule 52 (Dec)


State 104

   50 DecList: Dec COMMA DecList .

    $default  reduce using rule 50 (DecList)


State 105

   66 Exp: ID LP error . RP

    RP  shift, and go to state 127


State 106

   67 Exp: ID LP RP .

    $default  reduce using rule 67 (Exp)


State 107

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID
   75 Args: Exp . COMMA Args
   76     | Exp .

    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    COMMA     shift, and go to state 128
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    LB        shift, and go to state 102

    $default  reduce using rule 76 (Args)


State 108

   65 Exp: ID LP Args . RP

    RP  shift, and go to state 129


State 109

   62 Exp: LP error RP .

    $default  reduce using rule 62 (Exp)


State 110

   61 Exp: LP Exp RP .

    $default  reduce using rule 61 (Exp)


State 111

   38 Stmt: IF LP Exp . RP Stmt
   39     | IF LP Exp . RP Stmt ELSE Stmt
   40     | IF LP Exp . RP error ELSE Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    RP        shift, and go to state 130
    LB        shift, and go to state 102


State 112

   42 Stmt: WHILE LP error . LC

    LC  shift, and go to state 131


State 113

   41 Stmt: WHILE LP Exp . RP Stmt
   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    PLUS      shift, and go to state 92
    MINUS     shift, and go to state 93
    STAR      shift, and go to state 94
    DIV       shift, and go to state 95
    DOT       shift, and go to state 96
    ASSIGNOP  shift, and go to state 98
    RELOP     shift, and go to state 99
    AND       shift, and go to state 100
    OR        shift, and go to state 101
    RP        shift, and go to state 132
    LB        shift, and go to state 102


State 114

   37 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 37 (Stmt)


State 115

   53 Exp: Exp . ASSIGNOP Exp
   54    | Exp . AND Exp
   55    | Exp . OR Exp
   56    | Exp . RELOP Exp
   57    | Exp . PLUS Exp
   57    | Exp PLUS Exp .
   58    | Exp . MINUS Exp
   59    | Exp . STAR Exp
   60    | Exp . DIV Exp
   68    | Exp . LB Exp RB
   69    | Exp . LB error RB
   70    | Exp . LB RB
   71    | Exp . DOT ID

    STAR  shift, and go to state 94
    DIV   shift, and go to state 95
    DOT   shift, and go to state 96
    LB    shift, and go to state 102

    $default  reduce using rule 57 (Exp)


State 116
